<resources>
    <string name="app_name">PhoneInfo</string>
    <string name="menu_settings">PhoneInfo</string>
    <string name="hello_world">PhoneInfo</string>
    <string name="_cloud">PhoneInfo</string>
    <string name="_bluetooth">PhoneInfo</string>
    <string name="_gesture">PhoneInfo</string>
    <string name="_gps">PhoneInfo</string>
    <string name="_system_info">PhoneInfo</string>
    <string name="_internet">PhoneInfo</string>
    <string name="_language">PhoneInfo</string>
    <string name="_set_notifycation">PhoneInfo</string>
</resources>
